<resources>
    <string name="app_name">Secure Data Storage</string>
    <string name="password_hint">Password</string>
    <string name="user_name_hint">User name</string>
    <string name="store_credentials_button_text">Store credentials</string>
    <string name="restore_credentials_button_text">Restore credentials</string>
    <string name="init_security_storage_button_text">Init security storage</string>
    <string name="security_storage_was_initialized_early_message">Security storage was initialized early.</string>
    <string name="security_storage_is_not_initialized_message">Security storage is not initialized.</string>
    <string name="security_storage_was_initialized_successfully_message">Security storage was initialized successfully.</string>
    <string name="data_was_stored_successfully">Data was stored successfully.</string>
    <string name="store_credentials_message">Storing credentials to secure storage…</string>
    <string name="restore_credentials_message">Restoring credentials from secure storage…</string>
    <string name="card_number_hint">Card number</string>
    <string name="expiration_date_text">Expiration date:</string>
    <string name="expiration_month_hint">Month</string>
    <string name="expiration_year_hint">Year</string>
    <string name="cvv_hint">CVV</string>
    <string name="submit_button_text">Submit</string>
    <string name="error_dialog_positive_answer">OK</string>
    <string name="all_fields_should_be_filled_message">All fields should be filled.</string>
    <string name="payment_parameters_were_stored_successfully_message">Payment parameters were stored successfully.</string>
    <string name="store_payment_parameters_message">Storing payments parameters…</string>
    <string name="buy_button_title">Buy</string>
    <string name="title_activity_approve_payment">Approve payment</string>
    <string name="action_settings">Settings</string>
    <string name="approve_payment_button">Approve payment</string>
    <string name="reinitialize_button_text">Re-pair smartwatch</string>
    <string name="reinitialize_security_storage_successfully_message">Security storage reinitialization was made successfully.</string>
    <string name="menu_edit_payment_info">Edit payment information</string>
    <string name="getting_payment_parameters_from_secure_storage">Getting payment parameters from secure storage…</string>
    <string name="title_activity_congratulations_activity">Congratulations</string>
    <string name="congratulations_message">Payment was successful!</string>
    <string name="make_payment_message">Make payment. Please wait.</string>
    <string name="secure_storage_initialization_message">Please wait. Secure storage is initializing…</string>
    <string name="enter_information_info_message">Enter your credit card information to be\nused for payment transactions</string>
    <string name="update_information_info_message">Update credit card information to be\nused for payment transactions</string>
    <string name="approve_payment_information_message">You are going to make a payment\nPlease confirm purchase with\nbelow credit card</string>
    <string name="item_name">GoPro HERO4 Session</string>
    <string name="item_price">$399.99</string>
    <string name="item_info">HERO4 Session packs the power of GoPro into our smallest, lightest, most convenient camera yet.</string>
    <string name="title_activity_splash">Secure Data Storage</string>
    <string name="splash_message">Set your password once,\n store it secure</string>
    <string name="splash_message_">Store your credit card information\nsafe and make payment process\nas easy as never before</string>


</resources>
