<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp">

    <TextView
        android:id="@+id/information_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center_horizontal"
        android:text="@string/enter_information_info_message"
        android:textColor="@color/app_blue"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/card_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/information_message"
        android:layout_marginTop="40dp"
        android:text="@string/card_number_hint" />

    <EditText
        android:id="@+id/card_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_number_label"
        android:inputType="number"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/expiration_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_number"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="30dp"
        android:text="@string/expiration_date_text"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/expiration_date_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expiration_date_label"
        android:orientation="horizontal"
        android:weightSum="2">

        <EditText
            android:id="@+id/expiration_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/expiration_month_hint"
            android:nextFocusDown="@+id/expiration_year"
            android:inputType="number"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/expiration_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/expiration_year_hint"
            android:inputType="number"
            android:nextFocusDown="@+id/card_cvv"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/card_cvv_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expiration_date_container"
        android:layout_marginTop="30dp"
        android:hint="@string/cvv_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_cvv_label"
        android:orientation="horizontal"
        android:weightSum="2">

        <EditText
            android:id="@+id/card_cvv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" />
    </LinearLayout>

</RelativeLayout>